force-app/main/default/objects/sumoapp__Email__c/sumoapp__Email__c.object-meta.xml
<CustomObject>
    <label>SUMO Email</label>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>Sumo Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>