force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__Attempts__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of attempts to send failed emails</inlineHelpText>
    <label>Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>