force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__Details__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>