force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EmailAddress__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>