force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__HtmlBody__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__HtmlBody__c</fullName>
    <label>HTML Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>