force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__IsDraft__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsDraft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Draft</label>
    <type>Checkbox</type>
</CustomField>