force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__IsReminder__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reminder</label>
    <type>Checkbox</type>
</CustomField>