force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__RecipientId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RecipientId__c</fullName>
    <label>Recipient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>