force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__RecipientType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RecipientType__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OWNER</fullName>
            </value>
            <value>
                <fullName>ATTENDEE</fullName>
            </value>
            <value>
                <fullName>ADMIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>