force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__Relation__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Relation__c</fullName>
    <label>Relation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>