force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__Status__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>FAIL</fullName>
                <label>Fail</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>