force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__Styles__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Styles__c</fullName>
    <label>Styles</label>
    <length>52000</length>
    <type>Html</type>
</CustomField>