force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__TriggerTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__TriggerTime__c</fullName>
    <label>Trigger Time</label>
    <type>DateTime</type>
</CustomField>