force-app/main/default/objects/sumoapp__Email__c/fields/sumoapp__Type__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOOKED</fullName>
                <label>Booked</label>
            </value>
            <value>
                <fullName>UPDATED</fullName>
                <label>Updated</label>
            </value>
            <value>
                <fullName>DECLINED</fullName>
                <label>Declined</label>
            </value>
            <value>
                <fullName>CANCELED</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>REMINDER</fullName>
                <label>Reminder</label>
            </value>
            <value>
                <fullName>BOOKED_SF_ONLY</fullName>
            </value>
            <value>
                <fullName>UPDATED_SF_ONLY</fullName>
            </value>
            <value>
                <fullName>CANCELED_SF_ONLY</fullName>
            </value>
            <value>
                <fullName>REMINDER_SF_ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>